--- a/package.json
+++ b/package.json
@@ -11,19 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
     "axios": "^0.21.1",
     "d": "^1.0.1",
-    "discord-paginationembed": "^2.1.0",
     "discord.js": "^12.5.3",
-    "discord.js-pagination": "^1.0.3",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "extract-zip": "^2.0.1",
+    "google": "^2.1.0",
     "googleapis": "^66.0.0",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^10.0.0",
-    "puppeteer-core": "^10.0.0",
     "simple-youtube-api": "^5.2.1"
   }
 }
