--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
 	"prefix": "!",
 	"version": "0.1.0",
 	"embedColor": "#0099ff",
-	"debugMode": "on"
+	"debugMode": "on",
+	"botAvatar": "https://i.imgur.com/4FuW9or.png"
 }
