google.js x2 pagination

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
 	"version": "0.1.0",
 	"embedColor": "#0099ff",
 	"debugMode": "on",
-	"botAvatar": "https://i.imgur.com/4FuW9or.png"
+	"botAvatar": "https://i.imgur.com/4FuW9or.png",
+	"repository": "https://github.com/m64x/mbot"
 }
