--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
+	"name": "mBot",
 	"prefix": "!",
 	"version": "0.1.0",
-	"embedColor": "#0099ff",
+	"embedColor": "#eb3144",
 	"debugMode": "on",
 	"avatar": "https://i.imgur.com/4FuW9or.png",
 	"repository": "https://github.com/m64x/mbot",
