--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "d": "^1.0.1",
     "discord.js": "^12.5.3",
     "dom-to-image": "^2.6.0",
@@ -19,8 +19,9 @@
     "express": "^4.17.1",
     "extract-zip": "^2.0.1",
     "google": "^2.1.0",
+    "google-it": "^1.6.2",
     "googleapis": "^66.0.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.2",
     "simple-youtube-api": "^5.2.1"
   }
 }
