--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-it": "^1.6.2",
     "googleapis": "^66.0.0",
     "node-fetch": "^2.6.2",
+    "puppeteer": "^10.4.0",
     "simple-youtube-api": "^5.2.1"
   }
 }
