--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
 	"debugMode": "on",
 	"avatar": "https://i.imgur.com/4FuW9or.png",
 	"repository": "https://github.com/m64x/mbot",
+	"adminID": "829068433798201364",
 	"backEmoji": "⬅",
 	"forwardEmoji": "➡"
 }
